kustomize/overlays/prod-rtd/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aas-tools
spec:
  ingressClassName: nginx-red-internal
  rules:
  - host: aas-tools.rtd.k8s.itv.local
    http:
      paths:
      - backend:
          serviceName: aas-tools-svc
          servicePort: 80
  tls:
  # - secretName: koen-test-domains-certificate
  - hosts:
    - aas-tools.rtd.k8s.itv.local
